--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,21 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.6.6</version>
         </dependency>
+        <!--Netty-->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.29.Final</version>
+        </dependency>
+        <!-- Zookeeper -->
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.6</version>
+            <type>pom</type>
+        </dependency>
+
+
 
     </dependencies>
     <build>
