--- a/src/main/java/com/fcy/Java/JDBC/Config.properties
+++ b/src/main/java/com/fcy/Java/JDBC/Config.properties
@@ -1,6 +1,6 @@
 username=root
 password=838502
-database=test
+database=pwmanager
 driver-name=com.mysql.jdbc.Driver
 host=127.0.0.1
 #url=jdbc:mysql://localhost:3306/test
