--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,16 @@
 
     <groupId>fcy</groupId>
     <artifactId>Image</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>BigData</module>
+        <module>Algorithm</module>
+        <module>Net</module>
+        <module>Parser</module>
+        <module>Util</module>
+        <module>JAVA</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>commons-logging</groupId>
