--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <module>Parser</module>
         <module>Util</module>
         <module>JAVA</module>
+        <module>MiddleWare</module>
+        <module>Experiment</module>
     </modules>
     <dependencies>
         <dependency>
