--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,20 @@
             <version>0.9</version>
         </dependency>
 
+        <!--基准测试-->
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>1.21</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>1.21</version>
+            <scope>provided</scope>
+        </dependency>
+
 
     </dependencies>
     <build>
