--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,17 @@
             <version>1.14.4</version>
         </dependency>
         <!--slf4j-->
+        <!--日志接口定义-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
+        </dependency>
+        <!--日志接口实现-->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
         </dependency>
         <!--MySql-->
         <dependency>
