--- a/Experiment/pom.xml
+++ b/Experiment/pom.xml
@@ -29,6 +29,11 @@
             <version>1.21</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.15</version>
+        </dependency>
     </dependencies>
 
 </project>
