--- a/Util/pom.xml
+++ b/Util/pom.xml
@@ -11,5 +11,12 @@
     <packaging>jar</packaging>
     <artifactId>Util</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.48</version>
+        </dependency>
+    </dependencies>
 
 </project>
