--- a/Middleware/pom.xml
+++ b/Middleware/pom.xml
@@ -62,6 +62,17 @@
             <artifactId>pdfbox</artifactId>
             <version>1.8.8</version>
         </dependency>
+        <!--Aspect-->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>1.8.13</version>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.13</version>
+        </dependency>
     </dependencies>
 
 </project>
