--- a/Algorithm/pom.xml
+++ b/Algorithm/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>spark-core_2.11</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 
 </project>
