--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>JAVA</module>
         <module>MiddleWare</module>
         <module>Experiment</module>
+        <module>spring</module>
     </modules>
 
     <dependencies>
