--- a/Util/pom.xml
+++ b/Util/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.48</version>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.12</version>
+        </dependency>
     </dependencies>
 
 </project>
