--- a/Util/pom.xml
+++ b/Util/pom.xml
@@ -43,6 +43,15 @@
             <version>7.0.55</version>
             <scope>compile</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.core -->
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jdt/org.eclipse.jdt.core -->
+        <dependency>
+            <groupId>org.eclipse.jdt</groupId>
+            <artifactId>org.eclipse.jdt.core</artifactId>
+            <version>3.16.0</version>
+        </dependency>
+
+
     </dependencies>
     <distributionManagement>
 <!--        <repository>-->
