--- a/Java/pom.xml
+++ b/Java/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>Util</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
