--- a/Util/pom.xml
+++ b/Util/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>org.eclipse.jdt.core</artifactId>
             <version>3.16.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/net.sourceforge.tess4j/tess4j -->
+        <dependency>
+            <groupId>net.sourceforge.tess4j</groupId>
+            <artifactId>tess4j</artifactId>
+            <version>5.8.0</version>
+        </dependency>
 
 
     </dependencies>
@@ -60,11 +66,11 @@
 <!--            &lt;!&ndash;指向仓库类型为host(宿主仓库）的储存类型为Release的仓库&ndash;&gt;-->
 <!--            <url>http://localhost:8081/nexus/repository/fcy-release/</url>-->
 <!--        </repository>-->
-        <snapshotRepository>
-            <id>snapshots</id>
-            <!--指向仓库类型为host(宿主仓库）的储存类型为Snapshot的仓库-->
-<!--            <url>http://localhost:8081/nexus/repository/fcy-snapshot/</url>-->
-            <url>http://120.79.158.25:8096/nexus/repository/fcy-snapshot/</url>
-        </snapshotRepository>
+<!--        <snapshotRepository>-->
+<!--            <id>snapshots</id>-->
+<!--            &lt;!&ndash;指向仓库类型为host(宿主仓库）的储存类型为Snapshot的仓库&ndash;&gt;-->
+<!--&lt;!&ndash;            <url>http://localhost:8081/nexus/repository/fcy-snapshot/</url>&ndash;&gt;-->
+<!--            <url>http://120.79.158.25:8096/nexus/repository/fcy-snapshot/</url>-->
+<!--        </snapshotRepository>-->
     </distributionManagement>
 </project>
